Fix alignment

--- a/css/index.css
+++ b/css/index.css
@@ -341,6 +341,14 @@ small {
     max-height: 320px;
 }
 
+section.sponsors {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+
 section.sponsors > iframe {
     height: 225px;
     border: 0;
